# quake3-server

./: BUILD  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  ioquake3.BUILD  renovate.json
.devcontainer/: devcontainer.json
.github/workflows/: main.yml  publish.yml  renovate.yml
